<resources>
    <string name="app_name">Empowering The Nation</string>
    <string name="TextView">"Welcome to Empowering The Nation, your trusted partner in skills development for domestic workers and gardeners. Since 2018, we've been dedicated to bridging the skills gap and unlocking potential in our community."
</string>
    <string name="textView">Courses Available</string>
    <string name="imageView">Logo</string>
    <string name="Title">Title</string>
    <string name="View">Six Month Courses</string>
    <string name="sixweeks">Six Week Courses</string>
    <string name="Views">First Aid -Fees: R1500
     -Purpose: To provide first aid awareness and basic life support </string>
    <string name="Firstaid">FirstAid</string>
    <string name="sewing">Sewing

Fees: R1500
-Purpose: To provide alterations and new garment tailoring services</string>
    <string name="landscaping">Landscaping

Fees: R1500
-Purpose: To provide landscaping services for new and established gardens </string>
    <string name="Lifeskills">Life Skills

Fees: R1500
Purpose: To provide skills to navigate basic life necessities</string>
    <string name="Childminding">Child Minding

Fees: R750
-Purpose: To provide basic child and baby care</string>
    <string name="Garden">Garden Maintenance Fees: R750  -Purpose: To provide basic knowledge of watering, pruning and planting in a domestic garden.</string>
    <string name="cooking">Fees: R750
-Purpose: To prepare and cook nutritious family meals</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sixmonth_firstaid">Six Month Course - First Aid</string>
    <string name="aid">Fees: R1500
Purpose: To provide first aid awareness and basic life support
Content:

-Wounds and bleeding
-Burns and fractures
-Emergency scene management
-Cardio-Pulmonary Resuscitation (CPR)
-Respiratory distress e.g., Choking, blocked airway </string>
    <string name="sixmonth_sewing">Six month course - Sewing </string>
    <string name="sewing1">Fees: R1500
Purpose: To provide alterations and new garment tailoring services
Content:

• Types of stitches
• Threading a sewing machine
• Sewing buttons, zips, hems and seams
• Alterations
• Designing and sewing new garments</string>

    <string name="Back">Back</string>
    <string name="Next">Next Course</string>
    <string name="sixlandscaping">Six Month Course - Landscaping</string>
    <string name="landscaping1">Fees: R1500
Purpose: To provide landscaping services for new and established gardens
        Content:

• Indigenous and exotic plants and trees
• Fixed structures (fountains, statues, benches, tables, built-in braai)
• Balancing of plants and trees in a garden
• Aesthetics of plant shapes and colours
• Garden layout
    </string>
    <string name="SixmonthLife">Six Month Course - Life Skills</string>
    <string name="Lifeskills1">Life Skills

Fees: R1500
Purpose: To provide skills to navigate basic life necessities
Content:

• Opening a bank account
• Basic labour law (know your rights)
• Basic reading and writing literacy
• Basic numeric literacy </string>
    <string name="Enroll">Enroll</string>
    <string name="sixWeekChild">Six Week Short Course  Child Minding</string>
    <string name="childminding1">Fees: R750
Purpose: To provide basic child and baby care
Content:

• birth to six-month old baby needs
• seven-month to one year old needs
• Toddler needs
• Educational toys</string>
    <string name="SixweekCooking">Six Week Short Course Cooking</string>
    <string name="Cooking1">Fees: R750
Purpose: To prepare and cook nutritious family meals
Content:

• Nutritional requirements for a healthy body
• Types of protein, carbohydrates and vegetables
• Planning meals
• Preparation and cooking of meals </string>
    <string name="SixweekGardening">Six Week Short Course Gardening Maintenance</string>
    <string name="Gardening1">Fees: R750
Purpose: To provide basic knowledge of watering, pruning and planting in a domestic garden.
Content:

• Water restrictions and the watering requirements of indigenous and exotic plants
• Pruning and propagation of plants
• Planting techniques for different plant types</string>
    <string name="Courses_Registration">Course Registration</string>
    <string name="name">Name and Surname</string>
    <string name="Phone">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="Adress">Address:</string>
    <string name="Course_Selection">Course Selection</string>
    <string name="courses">Courses</string>
    <string name="Course_selected">Courses Selected</string>
    <string name="Price">Price</string>
    <string name="FirstAid1">First Aid</string>
    <string name="Sewing1">Sewing</string>
    <string name="Landscaping1">Landscaping</string>
    <string name="LifeSkills">Life Skills</string>
    <string name="Childminding1">Child Minding</string>
    <string name="Cooking2">Cooking</string>
    <string name="Garden1">Garden Maintenance</string>
    <string name="Fees">R1500</string>
    <string name="place">No courses selected.</string>
    <string name="Fees1">R750</string>
    <string name="confirm">Confirm</string>
    <string name="Consultation">Request Consultation</string>
    <string name="Total">Total Vat included </string>
    <string name="Total_amount">Total Price: R0.00</string>
    <string name="ContactUs">Contact US</string>
    <string name="Email">Email: pradebe@gmail.com</string>
    <string name="Number">Number : 0213005222</string>
    <string name="Address">Bloemfontein: 61 Second Avenue, Westdene, Bloemfontein 9301, South Africa</string>
    <string name="Address1">Cape Town: 5 Silo Square, V&amp;A Waterfront, Cape Town 8002, South Africa</string>
    <string name="Address2">Durban: 34 Richefond Circle, Ridgeside Office Park, Umhlanga Ridge, Durban 4319, South Africa</string>
    <string name="Exit">Exit</string>
    <string name="Map">Map</string>
    <string name="Logo">Logo</string>
    <string name="Come">Please Contact Us should you have any enquires or visit any one of our 3 premises</string>
</resources>