<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06141B"
    tools:context=".Firstaid">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="119dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2024_09_15_at_01_16_04_030a1a51" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="213dp"
        android:layout_height="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="292dp"
        android:layout_height="36dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="556dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sixmonth_firstaid"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="189dp"
        android:layout_height="377dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/Firstaid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/__1_png" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="190dp"
        android:layout_height="383dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="144dp"
        android:text="@string/aid"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#4A5C6A"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#4A5C6A"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>