<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06141B"
    tools:context=".Mainscreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="117dp"
        android:layout_height="104dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whatsapp_image_2024_09_15_at_01_16_04_030a1a51"
        android:contentDescription="@string/imageView"/>

    <TextView
        android:id="@+id/Description"
        android:layout_width="355dp"
        android:layout_height="239dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="330dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="#4A5C6A"
        android:text="@string/sixweeks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="121dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#4A5C6A"
        android:text="@string/View"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Courses.available"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="29dp"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>