<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06141B"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#06141B"
        tools:context=".SixMonthCourses">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="106dp"
            android:layout_height="93dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/whatsapp_image_2024_09_15_at_01_16_04_030a1a51"
            android:contentDescription="@string/imageView"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="162dp"
            android:layout_height="124dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="227dp"
            android:layout_height="47dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/View"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="216dp"
            android:layout_height="120dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/Views"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="97dp"
            android:layout_height="137dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/sewing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/__3_png" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="209dp"
            android:layout_height="136dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sewing"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="116dp"
            android:layout_height="124dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/Lifeskills"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/life_skills" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="206dp"
            android:layout_height="123dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/Lifeskills"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="97dp"
            android:layout_height="128dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/landscaping"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/stockcake_landscaping_urban_greenery_1726614363" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="212dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/landscaping"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="92dp"
            android:layout_height="125dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/Firstaid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/__1_png" />

        <Button
            android:id="@+id/button21"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#4A5C6A"
            android:text="@string/Back"
            app:layout_constraintEnd_toStartOf="@+id/button23"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="94dp"
            android:backgroundTint="#4A5C6A"
            android:text="@string/Enroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>